log/build_2025-05-25_10-33-04/wula/stdout_stderr.log
running egg_info
writing ../../build/wula/wula.egg-info/PKG-INFO
writing dependency_links to ../../build/wula/wula.egg-info/dependency_links.txt
writing entry points to ../../build/wula/wula.egg-info/entry_points.txt
writing requirements to ../../build/wula/wula.egg-info/requires.txt
writing top-level names to ../../build/wula/wula.egg-info/top_level.txt
reading manifest file '../../build/wula/wula.egg-info/SOURCES.txt'
writing manifest file '../../build/wula/wula.egg-info/SOURCES.txt'
running build
running build_py
copying wula/sp/SP_boson.py -> /home/iclab/Desktop/humanoid/build/wula/build/lib/wula/sp
running install
running install_lib
copying /home/iclab/Desktop/humanoid/build/wula/build/lib/wula/sp/SP_boson.py -> /home/iclab/Desktop/humanoid/install/wula/lib/python3.10/site-packages/wula/sp
byte-compiling /home/iclab/Desktop/humanoid/install/wula/lib/python3.10/site-packages/wula/sp/SP_boson.py to SP_boson.cpython-310.pyc
  File "/home/iclab/Desktop/humanoid/install/wula/lib/python3.10/site-packages/wula/sp/SP_boson.py", line 78
    theta = min(2 theta-1)     #直走
                ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/iclab/Desktop/humanoid/install/wula/lib/python3.10/site-packages/wula-0.1.0-py3.10.egg-info' (and everything under it)
Copying ../../build/wula/wula.egg-info to /home/iclab/Desktop/humanoid/install/wula/lib/python3.10/site-packages/wula-0.1.0-py3.10.egg-info
running install_scripts
Installing sp_boson script to /home/iclab/Desktop/humanoid/install/wula/lib/wula
writing list of installed files to '/home/iclab/Desktop/humanoid/build/wula/install.log'
